--- a/src/main/resources/templates/checkoutPagamento.html
+++ b/src/main/resources/templates/checkoutPagamento.html
@@ -123,29 +123,16 @@
                     </div>
                     <hr class="text-white">
                     <div class="row">
-                        <div class="col-6 col-md-5 py-3"
-                            style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
-                            <h6 class="text-white">Dados Pessoais</h6>
-                            <small class="text-white">Informações que serão inseridas na nota fiscal do pedido.</small>
-                            <hr class="text-white">
-                            <small class="text-white"><b>Thiago Soares Bellico</b></small> <br>
-                            <small class="text-white"><b>CPF:</b> 522.017.798-21</small> <br>
-                            <small class="text-white"><b>E-mail:</b> thiagobellico@outlook.com</small> <br>
-                            <small class="text-white"><b>CEP:</b> 05833-120 - São Paulo, SP. </small> <br>
-                        </div>
-
-                        <div class="col-6 col-md-2">
-                        </div>
-
-                        <div class="col-6 col-md-5 py-3"
+                        <div class="col-12 col-md-12 py-3"
                             style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
                             <h6 id="" class="text-white">Endereço de entrega</h6>
                             <small class="text-white">Este é o endereço onde seu pedido será enviado</small>
                             <hr class="text-white">
-                            <small class="text-white">Rua Ferreiropolis,</small> <br>
-                            <small class="text-white">Apartamento 22 Bloco 6,</small> <br>
-                            <small class="text-white">Jardim Vaz de Lima,</small> <br>
-                            <small class="text-white">CEP 05833-120 - São Paulo, SP. </small> <br>
+                            <small class="text-white" id="ruaLogado" th:text="'Rua ' + ${enderecoPrincipal.logradouro + ', ' + enderecoPrincipal.numero} ?: 'Endereço não disponível'"></small> <br>
+                            <small class="text-white" id="bairroLogado" th:text="${enderecoPrincipal.bairro}">Endereço não disponível</small> <br>
+                            <small class="text-white" id="cepLogado" th:text="${enderecoPrincipal.cep}">Endereço não disponível</small> <br>
+                            <small class="text-white" id="cidadeUfLogado" th:text="${enderecoPrincipal.cidade + ' - ' + enderecoPrincipal.uf}">Endereço não disponível</small> <br>
+                            <small class="text-white" id="complementoLogado" th:text="${enderecoPrincipal.complemento}">Endereço não disponível</small> <br>
                         </div>
                     </div>
                 </div>
@@ -202,7 +189,7 @@
 
                     <div class="d-grid gap-2 mb-5 me-5 ms-5 mt-5">
                         <button class="btn btn-primary botaoPadrao" type="button">Finalizar</button>
-                        <button class="btn btn-outline-warning" type="button">Voltar</button>
+                        <button class="btn btn-outline-warning"  onclick="window.history.back();" type="button">Voltar</button>
                     </div>
                     <small class="text-white">Ao efetuar o seu pedido, você concorda com os Termos e condições de Venda
                         do Winery! e com nossa Política de Privacidade.</small>
