--- a/src/main/resources/templates/formaPagamento.html
+++ b/src/main/resources/templates/formaPagamento.html
@@ -262,10 +262,12 @@
             </li>
         </ul>
     </div>
-
-    <div class="container text-end">
+    <div class="container d-flex justify-content-between align-items-end">
+        <button class="btn btn-outline-warning mt-5" onclick="window.history.back();" type="button">Voltar</button>
         <button type="submit" class="btn botaoPadrao mt-5 text-white" id="avancarButton">Avançar</button>
+
     </div>
+    
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
     <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
